--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center">
           <div class="android-font android-slogan">Réussir n'a jamais été aussi facile</div>
-          <div class="android-font android-sub-slogan">Bienvenu sur PolyLearn... nous utilisons une technologie d'ancrage mémoriel</div>
+          <div class="android-font android-sub-slogan">Bienvenue sur PolyLearn... nous utilisons une technologie d'ancrage mémoriel</div>
 
 <div class="mdl-grid">
           <a href="http://polylearn.co" class="mdl-cell mdl-cell--6-col">
@@ -165,30 +165,39 @@
         <div class="android-screen-section mdl-typography--text-center">
           <a name="screens"></a>
           <div class="mdl-typography--display-1-color-contrast">Une suite complète d'entrainement</div>
+          <br>
+          <div class="mdl-typography--headline-color-contrast">et bien plus...</div>
 
           <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--3-col">
+            <div class="mdl-cell--3-col">
+            </div>
+            <div class="mdl-cell mdl-cell--3-col" data-sr>
               <a class="android-image-link" href="">
                 <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/078-128.png">
                 <br>
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Cours</a>
             </div>
-            <div class="mdl-cell mdl-cell--3-col">
+            <div class="mdl-cell mdl-cell--3-col" data-sr>
               <a class="android-image-link" href="">
                 <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/062-128.png">
                 <br>
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Exercices</a>
             </div>
-            <div class="mdl-cell mdl-cell--3-col">
+            <div class="mdl-cell--3-col">
+            </div>
+
+            <div class="mdl-cell--3-col">
+            </div>
+            <div class="mdl-cell mdl-cell--3-col" data-sr>
               <a class="android-image-link" href="">
                 <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/052-128.png">
                 <br>
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Examens</a>
             </div>
-            <div class="mdl-cell mdl-cell--3-col">
+            <div class="mdl-cell mdl-cell--3-col" data-sr>
               <a class="android-image-link" href="">
                 <img class="android-screen-image" src="https://cdn1.iconfinder.com/data/icons/education-colored-icons-vol-2/128/056-128.png">
                 <br>
@@ -206,16 +215,46 @@
           -->
           </div>
 
-          <div class="mdl-typography--headline-color-contrast">et bien plus...</div>
-
         </div>
         <div class="android-wear-section">
+
+          <!--
+          <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Temps de révision réduit pour un score maximum</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              Nous avons développé une technologie permettant d'identifier vos faiblesses afin de réduire votre temps de révisions.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                En savoir plus sur notre technologie&nbsp;<i class="material-icons">chevron_right</i>
+              </a>
+            </div>
+            <div class="mdl-card__menu">
+              <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                <i class="material-icons">share</i>
+              </button>
+            </div>
+          </div>
+        -->
+
           <div class="android-wear-band">
+
+            <div class="mdl-grid" style="margin-top:-150px;">
+              <div class="mdl-cell--3-col">
+              </div>
+              <div class="mdl-shadow--2dp mdl-cell mdl-cell--6-col inside-card">
+                <h3 class="mdl-typography--display-1">Des révisions efficaces</h3>
+                <hr>
+                <p class="mdl-typography--headline mdl-typography--font-thin">
+                  Nous avons développé une technologie permettant d'identifier vos faiblesses afin de réduire votre temps de révisions.
+                </p>
+              </div>
+            </div>
+
             <div class="android-wear-band-text">
               <div class="mdl-typography--display-2 mdl-typography--font-thin">Ancrage mémoriel</div>
-              <p class="mdl-typography--headline mdl-typography--font-thin">
-                Nous avons développé une technologie permettant d'identifier vos faiblesses afin de réduire votre temps de révisions.
-              </p>
               <p>
                 <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
                   En savoir plus sur notre technologie&nbsp;<i class="material-icons">chevron_right</i>
@@ -224,6 +263,8 @@
             </div>
           </div>
         </div>
+
+        <!--
         <div class="android-customized-section">
           <div class="android-customized-section-text">
             <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Temps de révision réduit pour un score maximum</div>
@@ -235,22 +276,35 @@
           </div>
           <div class="android-customized-section-image"></div>
         </div>
+      -->
+
+
         <div class="android-more-section">
 
+          <div class="" style="text-align:center">
+            <div class="android-section-title mdl-typography--display-1-color-contrast">Des applications mobiles</div>
+            <p class="mdl-typography--title-color-contrast">
+              Entrainez-vous depuis votre smartphone
+            </p>
+
+            <img src="http://polylearn.co/img/index/16cf3fe8.playstore.png" width="125">
+            <img width="143" src="http://polylearn.co/img/index/484a65a3.appstore.png">
+          </div>
 
           <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--4-col">
-              <img class="img-responsive-100"src="http://polylearn.co/img/index/fd087270.poly_phone.png">
+            <div class="mdl-cell--4-col">
             </div>
 
-            <div class="mdl-cell mdl-cell--8-col">
-              <div class="android-section-title mdl-typography--display-1-color-contrast">Des applications mobiles</div>
-              <p class="mdl-typography--title-color-contrast">
-                Entrainez-vous depuis votre smartphone
-              </p>
+            <div class="mdl-cell mdl-cell--4-col" style="text-align:center">
+              <img class="img-responsive-100"src="http://polylearn.co/img/index/fd087270.poly_phone.png">
+            </div>
+            <!--
+            <div class="mdl-cell mdl-cell--4-col" style="text-align:center">
+              <img class="img-responsive-100"src="http://polylearn.co/img/index/fd087270.poly_phone.png">
+            </div>
+          -->
 
-              <img src="http://polylearn.co/img/index/16cf3fe8.playstore.png" width="125">
-              <img width="143" src="http://polylearn.co/img/index/484a65a3.appstore.png">
+            <div class="mdl-cell--4-col">
             </div>
 
           </div>
@@ -307,8 +361,21 @@
       </div>
     </div>
     <a href="https://github.com/google/material-design-lite/blob/master/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">ESSAYER !</a>
-    <script src="../../material.min.js"></script>
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
 
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://polylearn.co",
+      "logo": "http://polylearn.co/img/65ad7dd4.logo.png",
+      "sameAs" : [
+        "https://www.facebook.com/polylearn.co/",
+        "https://plus.google.com/+Polylearn"
+      ]
+    }
+    </script>
 
   </body>
 </html>
